933.	[func]*		marcin
	DHCPv4 server by default identifies a client using the
	client-identifier, if present. The new configuration
	parameter 'match-client-id' allows for disabling this
	behavior, i.e. 'chaddr' field is used to identify the
	client instead.
	(Trac #3747, git b9dc6ffd0f3396e9da8e0c83fd82164b8b8af011)

932.	[func]		kalmus
	MySQL schema has been extended with tables that can store
	host reservation. This ticket updates database schema only,
	the tables are not in use yet.
	(Trac #3567, git d2cd5d53b3f31422a342c9bb8946dad9ed1ea032)

931.	[func]		marcin
	Improved log messages emitted by the DHCPv4 server. Also,
	the server is now using multiple distinct loggers for logging
	messages pertaining to different functional parts of the
	code, e.g. packet transmission, lease allocation, DDNS etc.
	For complete list of logger names see User Guide.
	(Trac #3806, git 7b148c2dd5e2696a541883223ce1efd2de81f143)

930.	[func]		tomek
	Statistics Manager is now implemented. There is a new library
	libkea-stats that governs statistics collection. Its usage will
	be added in the upcoming tickets.
	(Trac #3793, git 68e9554ecabfc2a79731eeec1c706522e4d39332)

929.	[build]		fdupont
	Corrected problem in build system whereby specifying an
	installation directory on the "configure" command line that
	included a "+" in the name caused the build to fail.
	(Trac #3713, git 741ff09b743307bad28ae13db440e5e0f402d319)

928.	[build]		fdupont
	A CONFIG_H_WAS_INCLUDED define has been added to provide
	a way in source files to check whether config.h has been included.
	(Trac #3812, git cbb135d5f217b0692dcdbc9cfcc04f6a0dbc3922)

927.	[bug]		tmark
	DHCPv4 no longer attempts to update the lease database with the
	generated FQDN when processing DHCPDISCOVERs.
	(Trac #3779, git 0b413ee8aba1afa1643b216a1e8c35103c6c975b)

926.	[bug]		marcin
	Fixed the crash during the logging deinitialization.
	(Trac #3823, git 435b958860ec7b921645bd5923fff96ea4341f19)

925.	[func]		marcin